--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+Tutorials/Roll a Ball/Library/metadata/
+*.info
+*.cache
+*.backup
+Tutorials/Roll a Ball/Temp/
