Removed files that shouldn't be checked in

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Temporary Items
 Tutorials/Roll a Ball/Library/
 Tutorials/Roll a Ball/obj/
 Tutorials/Roll a Ball/Temp/
+Tutorials/Roll a Ball/Builds/
+Tutorials/Standard Assets Example Project/Library/
+Tutorials/Standard Assets Example Project/Temp/
