--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,8 @@ Tutorials/Roll a Ball/Library/
 Tutorials/Roll a Ball/obj/
 Tutorials/Roll a Ball/Temp/
 Tutorials/Roll a Ball/Builds/
-Tutorials/Standard Assets Example Project/Library/
-Tutorials/Standard Assets Example Project/Temp/
+Tutorials/Standard Assets Example Project/
 Tutorials/Space Shooter/Library/
+Tutorials/Space Shooter/obj/
 Tutorials/Space Shooter/Temp/
+Tutorials/Space Shooter/Builds/
