First commit for 3D Space Shooter project
Includes basic player and camera movement
Random sphere spawning in the world for perspective
Space skybox from Asset Store

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ Tutorials/Space Shooter/Library/
 Tutorials/Space Shooter/obj/
 Tutorials/Space Shooter/Temp/
 Tutorials/Space Shooter/Builds/
+Tutorials/3D Space Combat/Library/
+Tutorials/3D Space Combat/Temp/
+Tutorials/3D Space Combat/Builds/
+Tutorials/3D Space Combat/obj/
