--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Tutorials/3D Space Combat/Library/
 Tutorials/3D Space Combat/Temp/
 Tutorials/3D Space Combat/Builds/
 Tutorials/3D Space Combat/obj/
+Tutorials/3D Space Combat/Assets/Standard Assets/
+Tutorials/3D Space Combat/Assets/Editor/
+Tutorials/3D Space Combat/Assets/Detonator Explosion Framework/
