Moved 3rd party libraries into a new folder, fixed aiming by adding raycasting that detects colliders in front of the cursor

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,4 @@ Tutorials/3D Space Combat/Library/
 Tutorials/3D Space Combat/Temp/
 Tutorials/3D Space Combat/Builds/
 Tutorials/3D Space Combat/obj/
-Tutorials/3D Space Combat/Assets/Standard Assets/
-Tutorials/3D Space Combat/Assets/Editor/
-Tutorials/3D Space Combat/Assets/Detonator Explosion Framework/
+Tutorials/3D Space Combat/Assets/3rd Party/
