--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.Editor.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.Editor.csproj
@@ -87,6 +87,18 @@
     <Reference Include="SyntaxTree.VisualStudio.Unity.Bridge">
       <HintPath>Library\UnityAssemblies\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
+    <Reference Include="RAIN">
+      <HintPath>Assets\3rd Party\RAIN\RAIN.dll</HintPath>
+    </Reference>
+    <Reference Include="RAINEditor">
+      <HintPath>Assets\3rd Party\RAIN\Editor\RAINEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="RAINMetaformEditor">
+      <HintPath>Assets\3rd Party\RAIN\Editor\RAINMetaformEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="RAINMetaform">
+      <HintPath>Assets\3rd Party\RAIN\RAINMetaform.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="3D Space Combat.CSharp.csproj">
@@ -95,6 +107,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\3rd Party\RAIN\Editor\ScriptTemplates\ActionTemplate_CS.cs" />
+    <Compile Include="Assets\3rd Party\RAIN\Editor\ScriptTemplates\DecisionTemplate_CS.cs" />
     <Compile Include="Assets\3rd Party\Standard Assets\Editor\ImageEffects\AntialiasingEditor.cs" />
     <Compile Include="Assets\3rd Party\Standard Assets\Editor\ImageEffects\BloomAndFlaresEditor.cs" />
     <Compile Include="Assets\3rd Party\Standard Assets\Editor\ImageEffects\BloomEditor.cs" />
@@ -112,6 +126,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\3rd Party\Detonator Explosion Framework\Resources\Detonator\Textures\HeatDistort.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\ScriptTemplates\BehaviorTreeTemplate.xml" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\AspectRingShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\AspectSphereShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\NavMeshColliderShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\NavMeshContourShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\VisualSensorLineShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\VisualSensorRingShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\Editor\Shaders\WaypointShader.shader" />
+    <None Include="Assets\3rd Party\RAIN\ReleaseNotes.txt" />
     <None Include="Assets\3rd Party\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
     <None Include="Assets\3rd Party\Standard Assets\Effects\ImageEffects\Shaders\BlendModesOverlay.shader" />
     <None Include="Assets\3rd Party\Standard Assets\Effects\ImageEffects\Shaders\BlurEffectConeTaps.shader" />
