--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.Editor.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.Editor.csproj
@@ -213,6 +213,7 @@
     <None Include="Assets\3rd Party\Standard Assets\Effects\ToonShading\Shaders\ToonLit.shader" />
     <None Include="Assets\3rd Party\Standard Assets\Effects\ToonShading\Shaders\ToonLitOutline.shader" />
     <None Include="Assets\Shaders\PlanetGlow.shader" />
+    <None Include="Assets\Shaders\RadialBlur.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
