Updated quest system to be more OOP
Added objectives
Objectives can be completed
Quests can be completed
UI menu is partially complete

--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
@@ -141,16 +141,26 @@
     <Compile Include="Assets\Scripts\HealthController.cs" />
     <Compile Include="Assets\Scripts\IndicatorController.cs" />
     <Compile Include="Assets\Scripts\LevelUpSystem.cs" />
+    <Compile Include="Assets\Scripts\ListItem.cs" />
+    <Compile Include="Assets\Scripts\ListItemResponder.cs" />
     <Compile Include="Assets\Scripts\Loader.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Mission.cs" />
     <Compile Include="Assets\Scripts\MissionDetails.cs" />
     <Compile Include="Assets\Scripts\MissionObjective.cs" />
     <Compile Include="Assets\Scripts\MissionsMenu.cs" />
+    <Compile Include="Assets\Scripts\Objective.cs" />
+    <Compile Include="Assets\Scripts\ObjectiveDisplay.cs" />
+    <Compile Include="Assets\Scripts\ObjectiveTarget.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\PlanetAtmosphere.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\PrimaryWeapon.cs" />
+    <Compile Include="Assets\Scripts\Quest.cs" />
+    <Compile Include="Assets\Scripts\QuestDetailsScreen.cs" />
+    <Compile Include="Assets\Scripts\QuestDisplay.cs" />
+    <Compile Include="Assets\Scripts\QuestManager.cs" />
+    <Compile Include="Assets\Scripts\QuestsDisplay.cs" />
     <Compile Include="Assets\Scripts\RadialBlur.cs" />
     <Compile Include="Assets\Scripts\RandomRotator.cs" />
     <Compile Include="Assets\Scripts\ReticleController.cs" />
