--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
@@ -157,10 +157,12 @@
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\PrimaryWeapon.cs" />
     <Compile Include="Assets\Scripts\Quest.cs" />
+    <Compile Include="Assets\Scripts\QuestDetails.cs" />
     <Compile Include="Assets\Scripts\QuestDetailsScreen.cs" />
     <Compile Include="Assets\Scripts\QuestDisplay.cs" />
+    <Compile Include="Assets\Scripts\QuestListDisplay.cs" />
     <Compile Include="Assets\Scripts\QuestManager.cs" />
-    <Compile Include="Assets\Scripts\QuestsDisplay.cs" />
+    <Compile Include="Assets\Scripts\QuestMenu.cs" />
     <Compile Include="Assets\Scripts\RadialBlur.cs" />
     <Compile Include="Assets\Scripts\RandomRotator.cs" />
     <Compile Include="Assets\Scripts\ReticleController.cs" />
