--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
@@ -145,10 +145,6 @@
     <Compile Include="Assets\Scripts\ListItemResponder.cs" />
     <Compile Include="Assets\Scripts\Loader.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
-    <Compile Include="Assets\Scripts\Mission.cs" />
-    <Compile Include="Assets\Scripts\MissionDetails.cs" />
-    <Compile Include="Assets\Scripts\MissionObjective.cs" />
-    <Compile Include="Assets\Scripts\MissionsMenu.cs" />
     <Compile Include="Assets\Scripts\Objective.cs" />
     <Compile Include="Assets\Scripts\ObjectiveDisplay.cs" />
     <Compile Include="Assets\Scripts\ObjectiveTarget.cs" />
@@ -174,6 +170,7 @@
     <Compile Include="Assets\Scripts\TargetableObject.cs" />
     <Compile Include="Assets\Scripts\Timer.cs" />
     <Compile Include="Assets\Scripts\UIProgressBarController.cs" />
+    <Compile Include="Assets\Scripts\UpdatesDisplay.cs" />
     <Compile Include="Assets\Scripts\WarpDrive.cs" />
     <Compile Include="Assets\Scripts\WarpTarget.cs" />
   </ItemGroup>
