Added background to subtitles. Changed font to Helvetica

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+Builds
 Tutorials/Roll a Ball/Library/
 Tutorials/Roll a Ball/obj/
 Tutorials/Roll a Ball/Temp/
