Changed XP popup, changed look of Quests menu

--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.csproj
@@ -83,16 +83,19 @@
     <Compile Include="Assets\Scripts\AISimple.cs" />
     <Compile Include="Assets\Scripts\AIWeaponController.cs" />
     <Compile Include="Assets\Scripts\AsteroidCluster.cs" />
+    <Compile Include="Assets\Scripts\Audio\DialogueManager.cs" />
+    <Compile Include="Assets\Scripts\Audio\SoundManager.cs" />
     <Compile Include="Assets\Scripts\BarTimingMiniGame.cs" />
     <Compile Include="Assets\Scripts\BlurCamera.cs" />
     <Compile Include="Assets\Scripts\BoltDamager.cs" />
+    <Compile Include="Assets\Scripts\BoltGrower.cs" />
     <Compile Include="Assets\Scripts\BoltMover.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\CameraShake.cs" />
     <Compile Include="Assets\Scripts\CurrentObjectiveDisplay.cs" />
     <Compile Include="Assets\Scripts\DamageInfo.cs" />
     <Compile Include="Assets\Scripts\DestinationIndicator.cs" />
-    <Compile Include="Assets\Scripts\DialogueManager.cs" />
+    <Compile Include="Assets\Scripts\DestroyOnTimeout.cs" />
     <Compile Include="Assets\Scripts\DockPoint.cs" />
     <Compile Include="Assets\Scripts\EnemyManager.cs" />
     <Compile Include="Assets\Scripts\Enums.cs" />
@@ -133,7 +136,6 @@
     <Compile Include="Assets\Scripts\RandomRotator.cs" />
     <Compile Include="Assets\Scripts\ReticleController.cs" />
     <Compile Include="Assets\Scripts\RotateToCursor.cs" />
-    <Compile Include="Assets\Scripts\SoundManager.cs" />
     <Compile Include="Assets\Scripts\SpaceDust.cs" />
     <Compile Include="Assets\Scripts\SpaceFog.cs" />
     <Compile Include="Assets\Scripts\SpawnPoint.cs" />
@@ -147,6 +149,9 @@
     <Compile Include="Assets\Scripts\UtilityHelper.cs" />
     <Compile Include="Assets\Scripts\WarpDrive.cs" />
     <Compile Include="Assets\Scripts\WarpTarget.cs" />
+    <Compile Include="Assets\Scripts\Weapons\ShotgunWeapon.cs" />
+    <Compile Include="Assets\Scripts\Weapons\TeleportWeapon.cs" />
+    <Compile Include="Assets\Scripts\Weapons\WeaponSelector.cs" />
     <Compile Include="Assets\_Third Party\CloudsToy\FPS Basics\FPS Scripts\FPSFlyerMouse.cs" />
     <Compile Include="Assets\_Third Party\CloudsToy\FPS Basics\FPS Scripts\FPSFlyerMousePhysics.cs" />
     <Compile Include="Assets\_Third Party\Detonator Explosion Framework\Sample Supporting Emitters\DetonatorSprayHelper.cs" />
