Created asteroid models from Blender with textures
added "inanimate" allegiance so asteroids can take damage
fixed bugs with NPC navigation

--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.Plugins.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.Plugins.csproj
@@ -77,7 +77,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Resources\Dialogues\dialogue1.txt" />
+    <None Include="Assets\Shaders\CombineTex.shader" />
+    <None Include="Assets\Shaders\CombineTexBump.shader" />
+    <None Include="Assets\Shaders\CombineTexBumpShadows.shader" />
     <None Include="Assets\Shaders\InverseVignetting.shader" />
+    <None Include="Assets\Shaders\My Shadows.cginc" />
     <None Include="Assets\Shaders\PlanetGlow.shader" />
     <None Include="Assets\Shaders\RadialBlur.shader" />
     <None Include="Assets\Shaders\Shield.shader" />
