--- a/Tutorials/3D Space Combat/3D Space Combat.CSharp.Editor.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.CSharp.Editor.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.2f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -140,7 +138,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Resources\Dialogues\dialogue1.txt" />
+    <None Include="Assets\Shaders\CombineTex.shader" />
+    <None Include="Assets\Shaders\CombineTexBump.shader" />
+    <None Include="Assets\Shaders\CombineTexBumpShadows.shader" />
     <None Include="Assets\Shaders\InverseVignetting.shader" />
+    <None Include="Assets\Shaders\My Shadows.cginc" />
     <None Include="Assets\Shaders\PlanetGlow.shader" />
     <None Include="Assets\Shaders\RadialBlur.shader" />
     <None Include="Assets\Shaders\Shield.shader" />
